修正「擴大招收僑外生計畫」提示顯示判斷

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -56,7 +56,9 @@
 </table>
 <br />
 
-<div style="text-align: center;"><label class="alert alert-warning" role="alert" id="memo" style="font-weight: bold;"></label></div>
+<div class="alert_expanded_plan hide" style="text-align: center;">
+	<label class="alert alert-warning" role="alert" id="alert_expanded_plan_text" style="font-weight: bold;"></label>
+</div>
 
 <br />
 
@@ -299,7 +301,9 @@
 
 <br />
 
-<div style="text-align: center;" class="IACP_table hide"><label class="alert alert-warning" role="alert" id="IACP_memo" style="font-weight: bold;">經核定辦理113學年度「產學攜手合作計畫僑生專班」者(學生於115學年度升讀合作技專校院)，請併同填報專班欲使用名額。</label></div>
+<div style="text-align: center;" class="IACP_table hide">
+	<label class="alert alert-warning" role="alert" id="IACP_memo" style="font-weight: bold;">經核定辦理113學年度「產學攜手合作計畫僑生專班」者(學生於115學年度升讀合作技專校院)，請併同填報專班欲使用名額。</label>
+</div>
 
 <br />
 
