學士班名額分配頁面修改
新增重點產業聯合分發授權確認相關判斷

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -285,6 +285,24 @@
 		</table>
 	</div>
 </div>
+<!-- 學士only -->
+<hr class="agree-authorization-form hide">
+<div class="container agree-authorization-form hide">
+	<div class="form-group row text-center">
+		<div class="form-check col-12">
+			<input type="checkbox" class="form-check-input agree-authorization-checkbox" disabled>
+			【重點產業系所招生】於「聯合分發」提供名額之校系（含「個人申請」餘額流入），<br/>
+			本校同意授權由海外聯招會檢視學生中文程度或修習中文背景相當於華語文測驗A2程度逕行分發。<br/>
+			（勾選代表同意）
+		</div>
+		<hr />
+		<div class="col-12">
+			<p>
+				※個人申請管道可自行運用「語言能力證明」欄審查學生中、英文能力
+			</p>
+		</div>
+	</div>
+</div>
 <!-- 港二技only -->
 <div class="row mt-5 twoYearOnly hide">
 	<div class="col-12 table-twoYear">
