新年度沒有緬甸失賠了
學士班名額分配頁面及學校頁面註解緬甸師培相關部份

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -252,17 +252,17 @@
 		<table id="table-bacheDeptList" class="table table-hover">
 			<thead>
 				<tr class="table-warning">
-					<th class="text-center" style="width:7%">簡章順序</th>
+					<th class="text-center" style="width:8%">簡章順序</th>
 					<th class="text-center" style="width:5%">代碼</th>
 					<th>名稱</th>
-					<th class="text-center" style="width:6%">個人申請名額</th>
+					<th class="text-center" style="width:8%">個人申請名額</th>
 					<th class="text-center" style="width:6%">餘額流用 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="個人申請分發後之餘額是否流用至聯合分發？若要流用，請勾選"></i></th>
-					<th class="text-center" style="width:6%">聯合分發名額</th>
+					<th class="text-center" style="width:8%">聯合分發名額</th>
 					<th class="text-center" style="width:5%">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發名額數不得低於參考值"></i></th>
 					<th class="text-center" style="width:18%">減招原因</th>
-					<th class="text-center" style="width:4%">是否單招</th>
-					<th class="text-center" style="width:7%">是否招生<br/>緬甸師培生</th>
-					<th class="text-center" style="width:7%">小計</th>
+					<th class="text-center" style="width:5%">是否單招</th>
+					<!-- <th class="text-center" style="width:7%">是否招生<br/>緬甸師培生</th> -->
+					<th class="text-center" style="width:8%">小計</th>
 				</tr>
 			</thead>
 			<tbody>
