--- a/index.ejs
+++ b/index.ejs
@@ -247,7 +247,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row ">
+	<!-- <div class="row ">
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
@@ -290,7 +290,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="row">
 		<div class="offset-2 col-2 text-center">
 			<button id="btn-save" data-action="save" class="btn btn-primary">
