修改登入頁面上的文字內容和附件連結顯示和新增QR code顯示

--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,11 @@ body {
 	text-align: center;
 }
 
+.qr {
+    max-width: 20%;
+    height: auto;
+}
+
 @media screen and (min-width: 48em) {
 	.header {
 		margin-bottom: 2rem;
