--- a/login.ejs
+++ b/login.ejs
@@ -56,9 +56,13 @@
 				帳號及密碼前以 114 年 5 月 20 日海聯試字第1142000564號函致送（諒達），請以貴校預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
 			</li>
 			<li>
-				回傳方式：確認名額無誤後，於 114 年 6 月 13 日（星期五）下午 5 時前，列印「115學年度僑、港澳生名額總量調查回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
+				填報日期：即日起開放填報115學年度招生簡章中、英文校系分則（暫不開放鎖定功能）。俟教育部核定名額總量後，始開放鎖定，並於核定名額總量後7個工作天截止填報（實際截止日期另以本會LINE群組通知）。
+			</li>
+			<li>
+				回傳方式：敬請貴校於截止日（日期另以本會LINE群組通知）前完成並確認簡章分則及名額分配無誤，進行鎖定並下載、列印系統產生之「正式版簡章回覆表」，經承辦人（或單位主管）簽章後，掃瞄回傳至本會（電子郵件信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>，傳真：<a href="tel:+886-49-2911182">049-2911182</a>），始完成簡章填報作業。
 			</li>
 		</ul>
+		<div style="text-align: center;"><img src="./img/qr_code.jpg"  class="qr"></div>
 	</div>
 </div>
 <div class="row">
@@ -88,11 +92,11 @@
 						教育部114年5月15日臺教高（四）字第1140047662號函(含填表說明)
 					</a>
 				</li>
-				<li class="list-group-item">
-					<a target="_blank" href="https://drive.google.com/file/d/1iYnkbjm0gql-5ivaPHVAxsDX5hXdyHFH/view?usp=sharing">
-						115招生名額增量申請表
-					</a>
-				</li>
+				<!-- <li class="list-group-item"> -->
+					<!-- <a target="_blank" href="https://drive.google.com/file/d/1iYnkbjm0gql-5ivaPHVAxsDX5hXdyHFH/view?usp=sharing"> -->
+						<!-- 115招生名額增量申請表 -->
+					<!-- </a> -->
+				<!-- </li> -->
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/drive/folders/1LpeBnXqM8SnTkeROHPJTZli5CuZyJFYG?usp=sharing">
 						各校上（114）年各學制校系分則規定
