修正學校資料按鈕跑版

--- a/index.ejs
+++ b/index.ejs
@@ -1,31 +1,28 @@
 <div id="form-schoolInfo">
 	<div class="row">
-		<div class="form-group col-6">
-			<div class="input-group">
-				<div class="input-group-prepend">
-					<div class="input-group-text">
-						學校代碼
-					</div>
-				</div>
-				<input type="text" id="schoolId" class="form-control" disabled>
-			</div>
-		</div>
-		<ul class="list-inline">
-			<li class="list-inline-item">
-				<div class="col-3 offset-3 text-center float-left">
-					<a href="addNewDepartment.html" class="btn btn-primary btn-lg">
-						新增系所或系所變更類組
-					</a>
-				</div>
-			</li>
-			<li class="list-inline-item">
-				<div class="col-3 offset-3 text-center float-left ">
-					<button class="btn btn-success btn-lg" id="downloadExcel">
-						下載學校清冊 Excel
-					</button>
-				</div>
-			</li>
-		</ul>
+	    <div class="form-group col-6">
+	        <div class="input-group">
+	            <div class="input-group-prepend">
+	                <div class="input-group-text">
+	                    學校代碼
+	                </div>
+	            </div>
+	            <input type="text" id="schoolId" class="form-control" disabled>
+	        </div>
+	    </div>
+
+	    <div class="form-group col-6 d-flex justify-content-center align-items-center">
+	        <div class="mx-2">
+	            <a href="addNewDepartment.html" class="btn btn-primary btn-lg">
+	                新增系所或系所變更類組
+	            </a>
+	        </div>
+	        <div class="mx-2">
+	            <button class="btn btn-success btn-lg" id="downloadExcel">
+	                下載學校清冊 Excel
+	            </button>
+	        </div>
+	    </div>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
